add minor changes to templates; add posts

--- a/btc/news/templates/news/base.html
+++ b/btc/news/templates/news/base.html
@@ -21,7 +21,7 @@
 <body>
     <header class="site-header">
         <!-- NAVIGATION -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+        <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top bg-primary">
           <div class="container">
             <div class="collapse navbar-collapse" id="navbarToggle">
               <a href="{% url 'news-home' %}">
@@ -70,7 +70,8 @@
       </main>
 
 
-    <div class="footer fixed-bottom">
+      <!-- fixed-bottom -->
+    <div class="footer">
         <a href="mailto:omakarov@btc-s.ru?cc=anton@btc-s.ru">
             <button class="btn">CONNECT WITH 7NEWS</button>
         </a>
@@ -86,7 +87,7 @@
         {% endblock %}
 
         <a class="text-sec">
-            All rights reserve © 1980 - 2020
+            All rights reserved © 1980 - 2020
         </a>
   <!-- Copyright -->
     </div>
