--- a/btc/news/templates/news/home.html
+++ b/btc/news/templates/news/home.html
@@ -7,9 +7,9 @@
             <!-- IF src starts with user => image does not get found ??? user.author.profile.image.url -->
         <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
           <div class="media-body">
+              <img class="rounded mx-auto" src="{{ post.image.url }}"></img>
             <div class="article-metadata">
-                <img src="{{ post.image.url }}"></img>
-                <br>
+                <br></br>
                 <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
                 <!-- DATE FORMAT: https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#date -->
                 <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
