--- a/btc/news/templates/news/post_detail.html
+++ b/btc/news/templates/news/post_detail.html
@@ -1,5 +1,5 @@
 {% extends "news/base.html" %}
-
+{% load humanize %}
 {% block content %}
 <article class="media content-section">
     <!-- BS4 CLASS rounded-circle-->
@@ -13,10 +13,6 @@
             <!-- DATE FORMAT: https://docs.djangoproject.com/en/3.1/ref/templates/builtins/#date -->
             <small class="text-muted">{{ object.date_posted|date:"F d, Y" }}</small>
             {% if object.author == user %}
-                <!-- btn - bs4 button -->
-                <!-- btn-secondary - bs4 muted button -->
-                <!-- btn-danger - bs4 delete button -->
-                <!-- btn-sm - bs4 small button ... -->
                 <div>
                     <a class="btn btn-secondary btn-sm mb-1 mt-1" href="{% url 'post-update' object.id %}">Update</a>
                     <a class="btn btn-danger btn-sm mb-1 mt-1" href="{% url 'post-delete' object.id %}">Delete</a>
@@ -26,6 +22,24 @@
         <h2 class="article-title">{{ object.title }}</h2>
         <h4 class="article-subtitle">{{ object.subtitle }}</h4>
         <p class="article-content">{{ object.content }}</p>
+
+        <!-- https://stackoverflow.com/questions/6704749/relatedmanager-object-is-not-iterable-django -->
+        <br></br>
+        <p class="font-weight-light text-muted font-size 24">COMMENTS</p>
+        <div class="media-body">
+
+            <a class="btn" href="{% url 'comment-post' object.id %}">Leave a comment</a>
+            <br></br>
+                        
+            {% for comment in object.comments.all %}
+                <div>
+                    <a class="text-secondary" href="{% url 'comment-detail' object.id comment.id %}">
+                        By {{ comment.author.first_name }} at {{ comment.date_posted|naturaltime }}
+                    </a>
+                    <p class="article-content">{{ comment.content }}</p>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 </article>
 {% endblock content %}
