--- a/btc/news/templates/news/home.html
+++ b/btc/news/templates/news/home.html
@@ -48,5 +48,5 @@
 {% endblock content %}
 
 {% block logobot %}
-    <img class="nav-item nav-link" width="100" height="50" src="{% static '../media/logo.png' %}"></img>
+    <img class="nav-item nav-link" width="100" height="50" src="{% static 'news/logo.png' %}"></img>
 {% endblock logobot %}
